force-app/main/default/objects/copado__User_Story__c/fields/Azure_Link__c.field-meta.xml
<CustomField>
    <fullName>Azure_Link__c</fullName>
    <label>Azure Link</label>
    <type>Url</type>
</CustomField>