force-app/main/default/objects/copado__User_Story__c/fields/bulut__Current_Branch__c.field-meta.xml
<CustomField>
    <fullName>bulut__Current_Branch__c</fullName>
    <description>This field hold the branch user story is currently in</description>
    <label>Current Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>