force-app/main/default/objects/copado__User_Story__c/fields/Code_Analyzer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Code_Analyzer_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dev must run Code Analyzer and have the scan pass before promotion/deploying</description>
    <inlineHelpText>Please click the &quot;Create Code Analyzer&quot; button and run the unit test. A failed scan will prevent deployment.</inlineHelpText>
    <label>Code Analyzer Approval</label>
    <type>Checkbox</type>
</CustomField>