force-app/main/default/objects/copado__User_Story__c/fields/Current_ENV_text__c.field-meta.xml
<CustomField>
    <fullName>Current_ENV_text__c</fullName>
    <label>Current ENV text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>