force-app/main/default/objects/copado__User_Story__c/fields/Current_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Environment__c</fullName>
    <label>Current Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev1</fullName>
                <default>true</default>
                <label>Dev1</label>
            </value>
            <value>
                <fullName>DevMerge</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>