force-app/main/default/objects/copado__User_Story__c/fields/Deployed_to_DevMerge__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_DevMerge__c</fullName>
    <label>Deployed to DevMerge</label>
    <type>DateTime</type>
</CustomField>