force-app/main/default/objects/copado__User_Story__c/fields/Deployed_to_INT__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_INT__c</fullName>
    <formula>IF(
    copado__Environment__r.Name = &quot;DevMerge&quot;,
    Now(),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployed to INT</label>
    <type>DateTime</type>
</CustomField>