force-app/main/default/objects/copado__User_Story__c/fields/Environment_Branch__c.field-meta.xml
<CustomField>
    <fullName>Environment_Branch__c</fullName>
    <formula>copado__Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Branch</label>
    <type>Text</type>
</CustomField>