force-app/main/default/objects/copado__User_Story__c/fields/Feature_Branch__c.field-meta.xml
<CustomField>
    <fullName>Feature_Branch__c</fullName>
    <formula>&quot;feature&quot;+&quot;/&quot;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Branch</label>
    <type>Text</type>
</CustomField>