force-app/main/default/objects/copado__User_Story__c/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://copadotesting.atlassian.net/browse/&apos; + Jira_Key__c , &apos;Jira URL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Jira Issue LInk</inlineHelpText>
    <label>Jira Link</label>
    <type>Text</type>
</CustomField>