force-app/main/default/objects/copado__User_Story__c/fields/Last_Promotion_Date_GMT_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Last_Promotion_Date_GMT_Sortable__c</fullName>
    <formula>TEXT(DATETIMEVALUE(copado__Last_Promotion_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Promotion Date (GMT Sortable)</label>
    <type>Text</type>
</CustomField>