force-app/main/default/objects/copado__User_Story__c/fields/Last_Synced_From_Linear__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_From_Linear__c</fullName>
    <label>Last Synced From Linear</label>
    <type>DateTime</type>
</CustomField>