force-app/main/default/objects/copado__User_Story__c/fields/Linear_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>Linear_Issue_ID__c</fullName>
    <externalId>true</externalId>
    <label>Linear Issue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>