force-app/main/default/objects/copado__User_Story__c/fields/Linear_Key__c.field-meta.xml
<CustomField>
    <fullName>Linear_Key__c</fullName>
    <label>Linear Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>