force-app/main/default/objects/copado__User_Story__c/fields/Linear_Priority__c.field-meta.xml
<CustomField>
    <fullName>Linear_Priority__c</fullName>
    <label>Linear Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>