force-app/main/default/objects/copado__User_Story__c/fields/Linear_URL__c.field-meta.xml
<CustomField>
    <fullName>Linear_URL__c</fullName>
    <label>Linear URL</label>
    <type>Url</type>
</CustomField>