force-app/main/default/objects/copado__User_Story__c/fields/Manual_Tasks_Present__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tasks_Present__c</fullName>
    <description>Roll up summary field to pull in the copado__Deployment_Task__c information so we can use it in a validation formula</description>
    <label>Manual Tasks Present</label>
    <summaryFilterItems>
        <field>copado__Deployment_Task__c.copado__Type__c</field>
        <operation>equals</operation>
        <value>Manual, Manual Task</value>
    </summaryFilterItems>
    <summaryForeignKey>copado__Deployment_Task__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>