force-app/main/default/objects/copado__User_Story__c/fields/Manual_Tasks_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tasks_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a user story has manual tasks, we need to review them to make sure none of them could be automated.</description>
    <inlineHelpText>Please make sure to review your US manual tasks, to ensure none of them could be automated or committed using Copado.</inlineHelpText>
    <label>Manual Tasks Reviewed</label>
    <type>Checkbox</type>
</CustomField>