force-app/main/default/objects/copado__User_Story__c/fields/Merge_Order__c.field-meta.xml
<CustomField>
    <fullName>Merge_Order__c</fullName>
    <description>We are trying to control the merge order by controlling the sequence</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Merge Order</label>
    <type>AutoNumber</type>
</CustomField>