force-app/main/default/objects/copado__User_Story__c/fields/SCA_Passed__c.field-meta.xml
<CustomField>
    <fullName>SCA_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCA Passed</label>
    <type>Checkbox</type>
</CustomField>