force-app/main/default/objects/copado__User_Story__c/fields/Story_Number__c.field-meta.xml
<CustomField>
    <fullName>Story_Number__c</fullName>
    <label>Story Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>