force-app/main/default/objects/copado__User_Story__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>