force-app/main/default/objects/copado__User_Story__c/validationRules/Prevent_Promotions_from_Dev4.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Promotions_from_Dev4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
copado__Org_Credential__r.Name = &quot;Dev4&quot;,
OR(
copado__Promote_Change__c,
copado__Promote_and_Deploy__c
)
)</errorConditionFormula>
    <errorMessage>Prevent Promotions from Dev4</errorMessage>
</ValidationRule>