force-app/main/default/objects/copado__User_Story__c/validationRules/Promote_User_Story_Apex_CustomValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>Promote_User_Story_Apex_CustomValidation</fullName>
    <active>true</active>
    <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
    <errorConditionFormula>AND( copado__Has_Apex_Code__c = true, 
OR( 
AND( PRIORVALUE(copado__Promote_Change__c) = false, copado__Promote_Change__c = true ), AND( PRIORVALUE(copado__Promote_and_Deploy__c) = false, copado__Promote_and_Deploy__c = true ) ), 
OR( /* Original coverage checks */ ISNULL(copado__Apex_Code_Coverage__c), ISNULL(copado__Minimum_Apex_Code_Coverage__c), copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c, 

/* New failure checks */ copado__Failing_Methods__c &gt; 0, copado__Classes_Without_Coverage__c &gt; 0, copado__Triggers_Without_Coverage__c &gt; 0 ) )</errorConditionFormula>
    <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
</ValidationRule>