force-app/main/default/objects/copado__User_Story__c/validationRules/Pull_Requests_Must_Be_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Pull_Requests_Must_Be_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
copado__Pull_Requests_Approved__c  = false,

OR(

AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),

AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)

)

)</errorConditionFormula>
    <errorMessage>You cannot Promote this User Story until you have an Approved Pull Request</errorMessage>
</ValidationRule>