force-app/main/default/objects/copado__User_Story__c/validationRules/Require_SCA_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_SCA_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( copado__Metadata_Types_in_Selection__c )),
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
SCA_Passed__c = false,
copado__Has_Apex_Code__c = true
)</errorConditionFormula>
    <errorDisplayField>SCA_Passed__c</errorDisplayField>
    <errorMessage>SCA results score must not exceed a score of 15 and not contain any 1 or 2 priority violations.</errorMessage>
</ValidationRule>