force-app/main/default/objects/copado__User_Story__c/validationRules/US_cant_move_passed_base_branch.validationRule-meta.xml
<ValidationRule>
    <fullName>US_cant_move_passed_base_branch</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        copado__Promote_Change__c, 
        copado__Promote_and_Deploy__c
    ), 
    NOT(ISBLANK(copado__Environment__c)),
    NOT(ISBLANK(copado__Base_Branch__c)),
    copado__Environment__c == copado__Base_Branch__c
)</errorConditionFormula>
    <errorMessage>My Rule: You can not move this user story passed its base branch</errorMessage>
</ValidationRule>