force-app/main/default/objects/copado__User_Story__c/listViews/Bitbucket_DX.listView-meta.xml
<ListView>
    <fullName>Bitbucket_DX</fullName>
    <columns>NAME</columns>
    <columns>copado__Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Org_Credential__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>Bitbucket DX</value>
    </filters>
    <label>Bitbucket DX</label>
</ListView>