force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>copadoconnect__External_ID__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Pull_Requests_Approved__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Is_Bundle__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copadoccmint__JIRA_key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>copado__Environment__c</field>
        <operation>notEqual</operation>
        <value>Production</value>
    </filters>
    <label>All</label>
</ListView>