force-app/main/default/objects/copado__User_Story__c/listViews/Copado_Bootcamp_Project.listView-meta.xml
<ListView>
    <fullName>Copado_Bootcamp_Project</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Is_Bundle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>copado__Environment__c</field>
        <operation>notEqual</operation>
        <value>Production</value>
    </filters>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>CopaBootcamp</value>
    </filters>
    <label>Copado Bootcamp Project</label>
</ListView>