force-app/main/default/objects/copado__User_Story__c/listViews/Github_DX.listView-meta.xml
<ListView>
    <fullName>Github_DX</fullName>
    <columns>NAME</columns>
    <columns>cmcSf__Apex_Test_Level__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Promote_and_Deploy__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>Github_DX</value>
    </filters>
    <label>Github_DX</label>
</ListView>