force-app/main/default/objects/copado__User_Story__c/listViews/SFDX_Project.listView-meta.xml
<ListView>
    <fullName>SFDX_Project</fullName>
    <columns>NAME</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Exclude_From_CBM__c</columns>
    <columns>copado__Is_Bundle__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>SFDX</value>
    </filters>
    <label>SFDX Project</label>
</ListView>